// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Escaped Names > Properly generates documentation for names which need escaping > # Of Files Generated 1`] = `8`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: escaped-names
    items:
    - name: escaped-names
      href: escaped-names/escaped-names.md
    - name: EnumWithSpookyMemberNames
      href: escaped-names/EnumWithSpookyMemberNames.md
    - name: ClassWithSpookyMemberNames
      href: escaped-names/ClassWithSpookyMemberNames.md
    - name: IInterfaceWithBadName
      href: escaped-names/IInterfaceWithBadName.md
    - name: InterfaceOKName
      href: escaped-names/InterfaceOKName.md
    - name: InterfaceWithSpookyMemberNames
      href: escaped-names/InterfaceWithSpookyMemberNames.md
"
`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > msdocs/scriptapi/escaped-names/ClassWithSpookyMemberNames.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: escaped-names.ClassWithSpookyMemberNames Class
description: Contents of the escaped-names.ClassWithSpookyMemberNames class.
---
# ClassWithSpookyMemberNames Class

## Properties

### **5memberWithNumberStart**
\`5memberWithNumberStart: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **member with spaces**
\`member with spaces: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **type**
\`type: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **void**
\`void: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

## Methods
- [delete](#delete)

### **delete**
\`
delete(): void
\`
  
Notes:
- This function can't be called in restricted-execution mode.
"
`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > msdocs/scriptapi/escaped-names/EnumWithSpookyMemberNames.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: escaped-names.EnumWithSpookyMemberNames Enumeration
description: Contents of the escaped-names.EnumWithSpookyMemberNames enumeration.
---
# EnumWithSpookyMemberNames Enumeration

## Constants
### **type**
\`type = "Name that is a keyword"\`
### **5valueWithNumberStart**
\`5valueWithNumberStart = "Name with a number at the start"\`
### **value with spaces**
\`value with spaces = "Name with a space in it"\`
"
`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > msdocs/scriptapi/escaped-names/IInterfaceWithBadName.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: escaped-names.IInterfaceWithBadName Interface
description: Contents of the escaped-names.IInterfaceWithBadName class.
---
# IInterfaceWithBadName Interface

## Properties

### **foo**
\`foo: number;\`

Type: *number*
"
`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > msdocs/scriptapi/escaped-names/InterfaceOKName.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: escaped-names.InterfaceOKName Interface
description: Contents of the escaped-names.InterfaceOKName class.
---
# InterfaceOKName Interface

## Properties

### **foo**
\`foo: number;\`

Type: *number*
"
`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > msdocs/scriptapi/escaped-names/InterfaceWithSpookyMemberNames.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: escaped-names.InterfaceWithSpookyMemberNames Interface
description: Contents of the escaped-names.InterfaceWithSpookyMemberNames class.
---
# InterfaceWithSpookyMemberNames Interface

## Properties

### **5memberWithNumberStart**
\`5memberWithNumberStart: number;\`

Type: *number*

### **member with spaces**
\`member with spaces: number;\`

Type: *number*

### **type**
\`type: number;\`

Type: *number*
"
`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > msdocs/scriptapi/escaped-names/escaped-names.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: escaped-names Module
description: Contents of the escaped-names module
---
# \`escaped-names\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "escaped-names",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Enumerations
- [EnumWithSpookyMemberNames](EnumWithSpookyMemberNames.md)

## Classes
- [ClassWithSpookyMemberNames](ClassWithSpookyMemberNames.md)

## Interfaces
- [IInterfaceWithBadName](IInterfaceWithBadName.md)
- [InterfaceOKName](InterfaceOKName.md)
- [InterfaceWithSpookyMemberNames](InterfaceWithSpookyMemberNames.md)
"
`;

exports[`Escaped Names > Properly generates documentation for names which need escaping > typescript/escaped-names@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "escaped-names",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export enum EnumWithSpookyMemberNames {
    'type' = 'Name that is a keyword',
    '5valueWithNumberStart' = 'Name with a number at the start',
    'value with spaces' = 'Name with a space in it',
}

export class ClassWithSpookyMemberNames {
    private constructor();
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    '5memberWithNumberStart': number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    'member with spaces': number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    'type': number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    'void': number;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    delete(): void;
}

export interface IInterfaceWithBadName {
    foo: number;
}

export interface InterfaceOKName {
    foo: number;
}

export interface InterfaceWithSpookyMemberNames {
    '5memberWithNumberStart': number;
    'member with spaces': number;
    type: number;
}
"
`;
